[gd_scene load_steps=13 format=2]

[ext_resource path="res://scenes/Enemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/EnemyBossCrab.gd" type="Script" id=2]
[ext_resource path="res://assets/sfx/alerted2.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/sfx/charge2.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/sfx/Hit_Hurt87.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/sfx/confused.wav" type="AudioStream" id=6]

[sub_resource type="StreamTexture" id=1]
load_path = "res://.import/colored_transparent_fixed.png-283f78511b4a6b33f0a339a4356a77fb.stex"

[sub_resource type="Animation" id=3]
resource_name = "Alert"
tracks/0/type = "value"
tracks/0/path = NodePath("Exclamation:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Exclamation:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -20 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "Confused"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Exclamation:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 3.9, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -20 ), Vector2( 0, -20 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Exclamation:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.8, 1.4, 3, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0, 720.0, 1080.0, 1440.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Exclamation:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=2]
resource_name = "GrowAnim"
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 1.5, 2, 2.5, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.5, 1.5 ), Vector2( 1, 1 ), Vector2( 1.75, 1.75 ), Vector2( 1.25, 1.25 ), Vector2( 2, 2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Area2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 1.5, 2, 2.5, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.5, 1.5 ), Vector2( 1, 1 ), Vector2( 1.75, 1.75 ), Vector2( 1.25, 1.25 ), Vector2( 2, 2 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CollisionShape2D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1, 1.5, 2, 2.5, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.5, 1.5 ), Vector2( 1, 1 ), Vector2( 1.75, 1.75 ), Vector2( 1.25, 1.25 ), Vector2( 2, 2 ) ]
}

[sub_resource type="StreamTexture" id=4]
load_path = "res://.import/tile819.png-1c068a43257add8a00684b145290b309.stex"

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 92, 49 )

[node name="EnemyBossCrab" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="CollisionShape2D" parent="." index="0" groups=[
"enemies_aux",
]]

[node name="CollisionShape2D2" parent="Area2D" index="0" groups=[
"enemies_aux",
]]

[node name="Sprite" type="Sprite" parent="." index="8"]
texture = SubResource( 1 )
vframes = 32
hframes = 32
frame = 185

[node name="GrowAnim" type="AnimationPlayer" parent="." index="9"]
anims/Alert = SubResource( 3 )
anims/Confused = SubResource( 5 )
anims/GrowAnim = SubResource( 2 )

[node name="Exclamation" type="Sprite" parent="." index="10"]
texture = SubResource( 4 )

[node name="SightLine" type="Area2D" parent="." index="11" groups=[
"enemies_aux",
]]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="SightLine" index="0" groups=[
"enemies_aux",
]]
shape = SubResource( 6 )

[node name="AlertedTimer" type="Timer" parent="." index="12"]

[node name="ConfusedTimer" type="Timer" parent="." index="13"]
wait_time = 2.0

[node name="MinionSpawnTimer" type="Timer" parent="." index="14"]
wait_time = 5.0

[node name="AlertedSound" type="AudioStreamPlayer" parent="." index="15"]
stream = ExtResource( 3 )
volume_db = -7.153
bus = "Enemy SFX"

[node name="ChargeSound" type="AudioStreamPlayer" parent="." index="16"]
stream = ExtResource( 4 )
volume_db = -7.153
bus = "Enemy SFX"

[node name="HitWallSound" type="AudioStreamPlayer" parent="." index="17"]
stream = ExtResource( 5 )
volume_db = -14.307
bus = "Enemy SFX"

[node name="ConfusedSound" type="AudioStreamPlayer" parent="." index="18"]
stream = ExtResource( 6 )
volume_db = -13.756
bus = "Enemy SFX"
[connection signal="area_entered" from="SightLine" to="." method="_on_SightLine_area_entered"]
[connection signal="area_exited" from="SightLine" to="." method="_on_SightLine_area_exited"]
[connection signal="timeout" from="AlertedTimer" to="." method="_on_AlertedTimer_timeout"]
[connection signal="timeout" from="ConfusedTimer" to="." method="_on_ConfusedTimer_timeout"]
[connection signal="timeout" from="MinionSpawnTimer" to="." method="_on_MinionSpawnTimer_timeout"]
